Fix more tests